java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/MakeVariableFinalTest/testMakeVariableFinal1.pass
package org.netbeans.test.java.hints;

public class MakeVariableFinal {
    
    public static int main(byte f) {
        final byte g = 9;
        
        new Runnable() {
            public void run() {
                System.err.println(g);
                System.err.println(f);
            }
        };
    }
    
}
